Improve planing capabilites
